--- a/tcpclient.ui
+++ b/tcpclient.ui
@@ -16,8 +16,8 @@
   <widget class="QLabel" name="tcpClientStatusLabel">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>20</y>
+     <x>-10</x>
+     <y>120</y>
      <width>321</width>
      <height>71</height>
     </rect>
@@ -41,7 +41,7 @@
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>150</y>
+     <y>230</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -53,8 +53,8 @@
   <widget class="QPushButton" name="tcpClientCloseBtn">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>150</y>
+     <x>280</x>
+     <y>230</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -67,13 +67,26 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>100</y>
+     <y>80</y>
      <width>311</width>
      <height>23</height>
     </rect>
    </property>
    <property name="value">
     <number>0</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>30</y>
+     <width>72</width>
+     <height>15</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>已完成：</string>
    </property>
   </widget>
  </widget>
