--- a/widget.ui
+++ b/widget.ui
@@ -19,6 +19,9 @@
    </item>
    <item row="0" column="1" rowspan="3">
     <widget class="QTableWidget" name="tableWidget">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <column>
       <property name="text">
        <string>用户名</string>
@@ -189,7 +192,7 @@
           <normaloff>:/textcolor.png</normaloff>:/textcolor.png</iconset>
         </property>
         <property name="checkable">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="autoRaise">
          <bool>true</bool>
@@ -206,7 +209,7 @@
           <normaloff>:/fileopen.png</normaloff>:/fileopen.png</iconset>
         </property>
         <property name="checkable">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="autoRaise">
          <bool>true</bool>
@@ -223,7 +226,7 @@
           <normaloff>:/Floppy.png</normaloff>:/Floppy.png</iconset>
         </property>
         <property name="checkable">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="autoRaise">
          <bool>true</bool>
@@ -240,7 +243,7 @@
           <normaloff>:/Bin (empty).png</normaloff>:/Bin (empty).png</iconset>
         </property>
         <property name="checkable">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="autoRaise">
          <bool>true</bool>
